@@ -14,11 +14,11 @@
         <hutool.version>5.8.27</hutool.version>
         <kala.version>0.70.0</kala.version>
         <slf4j.version>2.0.13</slf4j.version>
-        <logback.version>1.5.5</logback.version>
+        <logback.version>1.5.6</logback.version>
         <guava.version>33.1.0-jre</guava.version>
         <fastjson.version>2.0.49</fastjson.version>
         <jackson.version>2.17.0</jackson.version>
-        <http-components.version>5.3.1</http-components.version>
+        <http-components.version>5.4-alpha2</http-components.version>
         <okhttp.version>5.0.0-alpha.14</okhttp.version>
     </properties>
 
@@ -200,6 +200,7 @@
                     <showDeprecation>true</showDeprecation>
                     <compilerArgs>
                         <compilerArg>--enable-preview</compilerArg>
+                        <compilerArg>--add-modules=jdk.incubator.vector</compilerArg>
                     </compilerArgs>
                 </configuration>
             </plugin>
